--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/warn.css">
 </head>
-<body>
+<body class="warn__body">
     <div class="warn">
         <h1>404</h1>
         <p>Упс… Страница, которую Вы ищете, не может быть найдена»</p>
